Initial commit of v3.0

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
-env/
-.idea/
-.vscode/
 __pycache__/
-test.*
+
+logs/
 *.log*
-*.iml
+
 temp/
-*test*
+
+env/
+venv/
+ENV/
+
+.mypy_cache/
+
+.vscode/*
