feat: implemeted ability to skip parsing reposts

--- a/.env
+++ b/.env
@@ -47,6 +47,8 @@ VAR_TIME_TO_SLEEP = 120
 VAR_SKIP_ADS_POSTS = True
 # Set True if you want to skip posts with specified Copyright
 VAR_SKIP_COPYRIGHTED_POST = False
+# Set True if you don't want to parse reposts
+VAR_SKIP_REPOSTS = False
 
 # Words whitelist.
 # Bot will repost posts only containing words in whitelist.
