Rewrote code with async, implemented the ability to run several bots with one script (#46)

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,4 +5,4 @@ services:
     build: ../
     volumes:
       - ../logs:/code/logs
-      - ../last_id.txt:/code/last_id.txt
+      - ../config.yaml:/code/config.yaml
